--- a/Victoria,_Northern_Samar.mw
+++ b/Victoria,_Northern_Samar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar victoria.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Victoria, Northern Samar
 | 1990 = 9043		
@@ -30,7 +31,9 @@ Say '''Victoria''' et kumalima ya klase baley ed luyag na [[Northern Samar]], [[
 * San Lazaro 	
 * San Miguel 	
 * San Roman
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
