--- a/Cabanatuan.mw
+++ b/Cabanatuan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_nueva_ecija_cabanatuan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Cabanatuan''' et unaan ya klase siyudad ed luyag na [[Nueva Ecija]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 272,676 totoo. <br> 	
-Walay kabaleg tan sukat to ya 192.29 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 3100. 			
+Walay kabaleg tan sukat to ya 192.29 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 3100. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Nueva Ecija}}	
 									
 [[Category:Saray siyudad na Filipinas]]
