--- a/Muñoz.mw
+++ b/Muñoz.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_nueva_ecija_munoz.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Muñoz''' et kumapat ya klase siyudad ed luyag na [[Nueva Ecija]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 75,462 totoo. <br> 	
-Walay kabaleg tan sukat to ya 163.05 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 3119. 			
+Walay kabaleg tan sukat to ya 163.05 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 3119. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Nueva Ecija}}	
 									
 [[Category:Saray siyudad na Filipinas]]
