--- a/Palayan.mw
+++ b/Palayan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_nueva_ecija_palayan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Palayan''' et kumalima ya klase siyudad ed luyag na [[Nueva Ecija]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 37,219 totoo. <br> 	
-Walay kabaleg tan sukat to ya 101.40 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 3132. 			
+Walay kabaleg tan sukat to ya 101.40 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 3132. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Nueva Ecija}}	
 									
 [[Category:Saray siyudad na Filipinas]]
