--- a/San_Jose,_Nueva_Ecija.mw
+++ b/San_Jose,_Nueva_Ecija.mw
@@ -1,9 +1,11 @@
-[[File:Ph_locator_nueva_ecija_san_jose.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''San Jose, Nueva Ecija''' et kumatlo ya klase siyudad ed luyag na [[Nueva Ecija]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 129,424 totoo. <br> 	
-Walay kabaleg tan sukat to ya 185.99 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 3121. 			
+Walay kabaleg tan sukat to ya 185.99 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 3121. 	
 
+== Saray reperensiya ==
+{{Reflist}}		
 
-{{Balon Ecija}}
+{{Nueva Ecija}}
 									
 [[Category:Saray siyudad na Filipinas]]
