--- a/Aliaga.mw
+++ b/Aliaga.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija aliaga.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Aliaga, Nueva Ecija
 | 1990 = 40425		
@@ -40,7 +41,9 @@ Say '''Aliaga''' et kumadwa ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipi
 * Santo Tomas
 * Sunson
 * Umangan
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
