--- a/Bongabon.mw
+++ b/Bongabon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija bongabon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bongabon, Nueva Ecija
 | 1990 = 39616		
@@ -42,6 +43,9 @@ Say '''Bongabon''' et kumadwa ya klase baley ed luyag na [[Nueva Ecija]], [[Pili
 * Tugatug
 * Tulay na Bato (Poblacion)
 * Vega Grande
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
