--- a/Cabiao.mw
+++ b/Cabiao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija cabiao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cabiao, Nueva Ecija
 | 1990 = 48850		
@@ -37,6 +38,9 @@ Say '''Cabiao''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipina
 * San Carlos
 * Santa Isabel
 * Santa Ines
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
