--- a/Carranglan,_Nueva_Ecija.mw
+++ b/Carranglan,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija carranglan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Carranglan, Nueva Ecija
 | 1990 = 26064		
@@ -31,6 +32,9 @@ Say '''Carranglan''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pili
 * F. C. Otic Poblacion (Brgy. II)
 * D. L. Maglanoc Poblacion (Brgy.III)
 * G. S. Rosario Poblacion (Brgy. IV)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
