--- a/Cuyapo,_Nueva_Ecija.mw
+++ b/Cuyapo,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija cuyapo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cuyapo, Nueva Ecija
 | 1990 = 43103		
@@ -65,6 +66,9 @@ Say '''Cuyapo''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipina
 * Tutuloy
 * Ungab
 * Villaflores
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
