--- a/Gabaldon.mw
+++ b/Gabaldon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija gabaldon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gabaldon, Nueva Ecija
 | 1990 = 21744		
@@ -30,6 +31,9 @@ Say '''Gabaldon''' et kumatlo ya klase baley ed luyag na [[Nueva Ecija]], [[Pili
 * South Poblacion
 * Sawmill
 * Tagumpay
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
