--- a/General_Mamerto_Natividad.mw
+++ b/General_Mamerto_Natividad.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija general mamerto natividad.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General Mamerto Natividad, Nueva Ecija
 | 1990 = 21984		
@@ -34,6 +35,9 @@ Say '''General Mamerto Natividad''' et kumapat ya klase baley ed luyag na [[Nuev
 * Sapang Bato
 * Talabutab Norte
 * Talabutab Sur
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
