--- a/General_Tinio.mw
+++ b/General_Tinio.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija general tinio.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General Tinio, Nueva Ecija
 | 1990 = 29491		
@@ -27,6 +28,9 @@ Say '''General Tinio''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[P
 * Pulong Matong
 * Sampaguita
 * Palale
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
