--- a/Guimba,_Nueva_Ecija.mw
+++ b/Guimba,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija guimba.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Guimba, Nueva Ecija
 | 1990 = 73363		
@@ -78,6 +79,9 @@ Say '''Guimba''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipina
 * Triala
 * Yuson
 * Bunol
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
