--- a/Jaen.mw
+++ b/Jaen.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija jaen.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jaen, Nueva Ecija
 | 1990 = 47346		
@@ -41,6 +42,9 @@ Say '''Jaen''' et kumadwa ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipina
 * Santo Tomas North
 * Santo Tomas South
 * Sapang
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
