--- a/Laur.mw
+++ b/Laur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija laur.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Laur, Nueva Ecija
 | 1990 = 21464		
@@ -31,6 +32,9 @@ Say '''Laur''' et kumatlo ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipina
 * San Vicente
 * Siclong
 * San Felipe
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
