--- a/Licab.mw
+++ b/Licab.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija licab.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Licab, Nueva Ecija
 | 1990 = 17202		
@@ -25,6 +26,9 @@ Say '''Licab''' et kumapat ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipin
 * Tabing Ilog
 * Villarosa
 * Aquino
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
