--- a/Llanera.mw
+++ b/Llanera.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija llanera.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Llanera, Nueva Ecija
 | 1990 = 23285		
@@ -36,6 +37,9 @@ Say '''Llanera''' et kumapat ya klase baley ed luyag na [[Nueva Ecija]], [[Pilip
 * Victoria
 * Villa Viniegas
 * Bosque
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
