--- a/Lupao,_Nueva_Ecija.mw
+++ b/Lupao,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija lupao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lupao, Nueva Ecija
 | 1990 = 27481		
@@ -38,6 +39,9 @@ Say '''Lupao''' et kumatlo ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipin
 * San Pedro
 * San Roque
 * Santo Domingo
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
