--- a/Nampicuan.mw
+++ b/Nampicuan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija nampicuan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Nampicuan, Nueva Ecija
 | 1990 = 8426		
@@ -35,6 +36,9 @@ Say '''Nampicuan''' et kumalima ya klase baley ed luyag na [[Nueva Ecija]], [[Pi
 * Southwest Poblacion
 * Tony
 * West Central Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
