--- a/Pantabangan.mw
+++ b/Pantabangan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija pantabangan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pantabangan, Nueva Ecija
 | 1990 = 18341		
@@ -28,6 +29,9 @@ Say '''Pantabangan''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pil
 * San Juan
 * Villarica
 * Fatima
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
