--- a/Peñaranda.mw
+++ b/Peñaranda.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija penaranda.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Peñaranda, Nueva Ecija
 | 1990 = 20500		
@@ -24,6 +25,9 @@ Say '''Peñaranda''' et kumapat ya klase baley ed luyag na [[Nueva Ecija]], [[Pi
 * Sinasajan
 * San Josef
 * San Mariano (Maugat)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
