--- a/Rizal,_Nueva_Ecija.mw
+++ b/Rizal,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija rizal.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rizal, Nueva Ecija
 | 1990 = 38970		
@@ -40,6 +41,9 @@ Say '''Rizal''' et kumadwa ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipin
 * Villa Labrador
 * Villa Paraiso
 * San Gregorio
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
