--- a/San_Antonio,_Nueva_Ecija.mw
+++ b/San_Antonio,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija san antonio.png|right|270px]]													
+{{Infobox location}}
+											
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Antonio, Nueva Ecija
 | 1990 = 51815		
@@ -30,6 +31,9 @@ Say '''San Antonio''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pil
 * Santo Cristo
 * Santa Barbara
 * Tikiw
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
