--- a/San_Isidro,_Nueva_Ecija.mw
+++ b/San_Isidro,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija san isidro.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Isidro, Nueva Ecija
 | 1990 = 34349		
@@ -23,7 +24,9 @@ Say '''San Isidro''' et kumadwa ya klase baley ed luyag na [[Nueva Ecija]], [[Pi
 * San Roque
 * Sto. Cristo
 * Tabon
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
