--- a/San_Leonardo.mw
+++ b/San_Leonardo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija san leonardo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Leonardo, Nueva Ecija
 | 1990 = 39740		
@@ -29,7 +30,9 @@ Say '''San Leonardo''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pi
 * Tabuating
 * Tagumpay
 * Tambo Adorable
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
