--- a/Santa_Rosa,_Nueva_Ecija.mw
+++ b/Santa_Rosa,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija santa rosa.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Rosa, Nueva Ecija
 | 1990 = 40439		
@@ -47,7 +48,9 @@ Say '''Santa Rosa''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pili
 * Sapsap
 * Tagpos
 * Tramo
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
