--- a/Santo_Domingo,_Nueva_Ecija.mw
+++ b/Santo_Domingo,_Nueva_Ecija.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija santo domingo.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santo Domingo, Nueva Ecija
 | 1990 = 35864		
@@ -38,7 +39,9 @@ Say '''Santo Domingo''' et kumatlo ya klase baley ed luyag na [[Nueva Ecija]], [
 * San Pascual
 * Santa Rita
 * Santo Rosario
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
