--- a/Talavera.mw
+++ b/Talavera.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija talavera.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talavera, Nueva Ecija
 | 1990 = 77256		
@@ -67,7 +68,9 @@ Say '''Talavera''' et unaan ya klase baley ed luyag na [[Nueva Ecija]], [[Pilipi
 * Tabacao
 * Tagaytay
 * Valle
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
