--- a/Talugtug.mw
+++ b/Talugtug.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator nueva ecija talugtug.png|right|270px]]							
+{{Infobox location}}
+					
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talugtug, Nueva Ecija
 | 1990 = 14036		
@@ -42,7 +43,9 @@ Say '''Talugtug''' et kumapat ya klase baley ed luyag na [[Nueva Ecija]], [[Pili
 * Villa Boado
 * Villa Rosario
 * Villa Rosenda
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
