--- a/Zaragoza.mw
+++ b/Zaragoza.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_nueva ecija zaragoza.png |right|Map of [[Nueva Ecija]] showing the location of Zaragoza.]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Zaragoza, Nueva Ecija
@@ -37,6 +37,9 @@ Say Zaragosa walay 19 ya [[baranggay]]:
 * Santo Rosario Old
 * Santo Rosario Young
 * Valeriana
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
