--- a/Aritao.mw
+++ b/Aritao.mw
@@ -57,4 +57,4 @@ Say Aritao walay 22 ya [[barangay]].
 
 {{Nueva Vizcaya}}
  
-[[Category:Balon Vizcaya]]
+[[Category:Saray baley na Nueva Vizcaya]]
