--- a/Abra_de_Ilog.mw
+++ b/Abra_de_Ilog.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Abra de Ilog |
- sealfile     = |
- locatormapfile = Ph_locator_occidental mindoro abra de ilog.png |
- caption      = Mapa na Mindoro ed Sagor ya nanengneng so location na Abra de Ilog. |
- region       = [[MIMARO]] (Rehiyon IV-B) |
- province     = [[Mindoro ed Sagor]] |
- districts    = Occidental Mindoro northern district |
- barangays    = 9 |
- class        = 4th class |
- mayor        = Carley Cartagena|
- founded      = [[1917]] |
- cityhood     =  |
- areakm2      = 533.70 |
- pop2000      = 22,212 |
- popden2000   = 41.60 |
- coordinates  =  |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Abra de Ilog, Occidental Mindoro
 | 1990 = 13609		
@@ -46,6 +28,8 @@ Say Abra De Ilóg walay 9 ya [[barangay]]:
 * Wawa (San Benito)
 * Armado (San Julian)
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -53,7 +37,5 @@ Say Abra De Ilóg walay 9 ya [[barangay]]:
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Occidental Mindoro}}
- 
-
 
 [[Category:Saray baley na Occidental Mindoro]]
