--- a/Calintaan.mw
+++ b/Calintaan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_occidental mindoro_calintaan.png|right|Mapa na Occidental Mindoro ya nanengneng so location na Calintaan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calintaan, Occidental Mindoro
 | 1990 = 18117		
@@ -24,6 +25,9 @@ Say Calintaan walay 7 ya barangay.
 * Poblacion
 * Poypoy
 * Tanyag
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
