--- a/Looc,_Occidental_Mindoro.mw
+++ b/Looc,_Occidental_Mindoro.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_occidental mindoro_looc.png|right|Mapa na Occidental Mindoro ya nanengneng so location na Looc]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Looc, Occidental Mindoro
 | 1990 = 7037		
@@ -26,6 +27,9 @@ Say Looc walay 9 ya barangay.
 * Guitna (Pob.)
 * Kanluran (Pob.)
 * Talaotao
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
