--- a/Lubang.mw
+++ b/Lubang.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_occidental mindoro_lubang.png|right|Mapa na Occidental Mindoro ya nanengneng so location na Lubang]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lubang, Occidental Mindoro
 | 1990 = 18800		
@@ -37,6 +38,9 @@ Say Lubang walay 16 ya barangay.
 * Ninikat Ng Pag-Asa (Pob.)
 * Paraiso (Pob.)
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
