--- a/Magsaysay,_Occidental_Mindoro.mw
+++ b/Magsaysay,_Occidental_Mindoro.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_occidental mindoro_magsaysay.png|right|Mapa na Occidental Mindoro ya nanengneng so location na Magsaysay]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magsaysay, Occidental Mindoro
 | 1990 = 21580		
@@ -13,8 +14,7 @@
 |}}
 Say '''Magsaysay''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 31,969 totoo. Walay kabaleg tan sukat to ya 296.7 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 5101.
 
-
-==Saray Barangay==
+==Saray barangay==
 * Alibog
 * Caguray
 * Calawag
@@ -28,12 +28,14 @@ Say '''Magsaysay''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]]
 * Santa Teresa
 * Sibalat
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Occidental Mindoro}}
- 
-															
+ 														
 [[Category:Saray baley na Occidental Mindoro]]
