--- a/Template:Occidental_Mindoro.mw
+++ b/Template:Occidental_Mindoro.mw
@@ -10,7 +10,7 @@
 * [[Looc, Occidental Mindoro|Looc]]
 * [[Lubang, Occidental Mindoro|Lubang]]
 * [[Magsaysay, Occidental Mindoro|Magsaysay]]
-* [[Mamburao]]
+* [[Mamburao, Occidental Mindoro|Mamburao]]
 * [[Paluan, Occidental Mindoro|Paluan]]
 * [[Rizal, Occidental Mindoro|Rizal]]
 * [[Sablayan, Occidental Mindoro|Sablayan]]
