--- a/Mamburao.mw
+++ b/Mamburao.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Mamburao<br>''Banwaan kan Mamboraw''<br>''Banwa wan Mambraw'' |
- sealfile     = |
- locatormapfile = Ph_locator_occidental mindoro mamburao.png |
- caption      = Mapa na Mindoro ed Sagor ya nanengneng so location na Mamburao. |
- region       = [[MIMARO]] (Rehiyon IV-B) |
- province     = [[Mindoro ed Sagor]] |
- districts    = Mindoro ed Sagor northern district |
- barangays    = 15 |
- class        = 2<sup>nd</sup> class |
- mayor        = Voltaire Anthony C. Villarosa |
- founded      = [[1955]] |
- cityhood     =  |
- areakm2      = 283.51 |
- pop2000      = 39,237 |
- popden2000   = 140 |
- coordinates  = 13°13′N 120°36′E |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mamburao, Occidental Mindoro
 | 1990 = 21781		
@@ -52,6 +34,8 @@ Say Mamburao walay 15 ya [[barangay]]:
 * Poblacion 7
 * Poblacion 8
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -59,6 +43,5 @@ Say Mamburao walay 15 ya [[barangay]]:
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Occidental Mindoro}}
- 
 
 [[Category:Saray baley na Occidental Mindoro]]
