--- a/Paluan.mw
+++ b/Paluan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_occidental mindoro_paluan.png|right|Mapa na Occidental Mindoro ya nanengneng so location na Paluan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Paluan, Occidental Mindoro
 | 1990 = 7549		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Paluan''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 15,223 totoo. Walay kabaleg tan sukat to ya 564.5 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 5107.
-
 
 ==Saray barangay==
 * Alipaoy
@@ -28,6 +28,8 @@ Say '''Paluan''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]], [
 * San Jose Poblacion (Bgy 6)
 * Tubili
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -35,6 +37,5 @@ Say '''Paluan''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]], [
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Occidental Mindoro}}
- 
-															
+ 													
 [[Category:Saray baley na Occidental Mindoro]]
