--- a/Rizal,_Occidental_Mindoro.mw
+++ b/Rizal,_Occidental_Mindoro.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_occidental mindoro_rizal.png|right|Mapa na Occidental Mindoro ya nanengneng so location na Rizal]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rizal, Occidental Mindoro
 | 1990 = 23379		
@@ -26,6 +27,8 @@ Say '''Rizal''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]], [[
 * Santo Niño
 * Manoot
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -33,6 +36,5 @@ Say '''Rizal''' et kumatlo ya klase baley ed luyag na [[Occidental Mindoro]], [[
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Occidental Mindoro}}
- 	
-															
+ 															
 [[Category:Saray baley na Occidental Mindoro]]
