--- a/Sablayan.mw
+++ b/Sablayan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_occidental mindoro_sablayan.png|right|Mapa na Occidental Mindoro ya nanengneng so location na Sablayan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sablayan, Occidental Mindoro
 | 1990 = 46546		
@@ -37,6 +38,8 @@ Say '''Sablayan''' et unaan ya klase baley ed luyag na [[Occidental Mindoro]], [
 * Malisbong
 * Tuban
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
@@ -44,6 +47,5 @@ Say '''Sablayan''' et unaan ya klase baley ed luyag na [[Occidental Mindoro]], [
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Occidental Mindoro}}
- 
-															
+ 														
 [[Category:Saray baley na Occidental Mindoro]]
