--- a/Santa_Cruz,_Occidental_Mindoro.mw
+++ b/Santa_Cruz,_Occidental_Mindoro.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_occidental mindoro_santa_cruz.png|right|Mapa na Occidental Mindoro ya nanengneng so location na Santa Cruz]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Cruz, Occidental Mindoro
 | 1990 = 16675		
@@ -26,12 +27,14 @@ Say '''Santa Cruz''' et unaan ya klase baley ed luyag na [[Occidental Mindoro]],
 * Poblacion II (Baranggay 2)
 * Kurtinganan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Occidental Mindoro}}
- 
-															
+ 														
 [[Category:Saray baley na Occidental Mindoro]]
