--- a/Calapan.mw
+++ b/Calapan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_oriental_mindoro_calapan.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Calapan''' et kumatlo ya klase siyudad ed luyag na [[Oriental Mindoro]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 124,173 totoo. <br> 	
-Walay kabaleg tan sukat to ya 250.06 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 5200. 			
+Walay kabaleg tan sukat to ya 250.06 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 5200.
+
+== Saray reperensiya ==
+{{Reflist}} 	
+
+{{Oriental Mindoro}}		
 									
 [[Category:Saray siyudad na Filipinas]]
