--- a/Baco,_Oriental_Mindoro.mw
+++ b/Baco,_Oriental_Mindoro.mw
@@ -1,4 +1,5 @@
-[[File:Ph_locator_oriental mindoro baco.png |right| Map of [[Mindoro ed Bokig]] showing the location of Baco.]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baco, Oriental Mindoro
 | 1990 = 23800		
@@ -49,6 +50,8 @@ Say Baco walay 27 ya [[barangay]]:
 * Poblacion
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
