--- a/Bansud.mw
+++ b/Bansud.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_oriental mindoro bansud.png |right]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bansud, Oriental Mindoro
@@ -32,6 +32,8 @@ Say Bansod walay 13 ya [[barangay]]:
 * Proper Tiguisan
 * Villa Pag-Asa
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
