--- a/Bulalacao.mw
+++ b/Bulalacao.mw
@@ -1,4 +1,5 @@
-[[File:Ph_locator_oriental mindoro bulalacao.png |right|Map of [[Mindoro ed Bokig]] showing the location of Bulalacao.]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bulalacao, Oriental Mindoro
 | 1990 = 21316		
@@ -32,6 +33,9 @@ Say San Pedro walay 15 ya [[barangay]]:
 * San Isidro
 * San Juan
 * San Roque (Buyayao)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
