--- a/Gloria,_Oriental_Mindoro.mw
+++ b/Gloria,_Oriental_Mindoro.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator oriental mindoro gloria.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gloria, Oriental Mindoro
 | 1990 = 30102		
@@ -42,12 +43,14 @@ Say '''Gloria''' et kumatlo ya klase baley ed luyag na [[Oriental Mindoro]], [[P
 * Santa Theresa
 * Tambong
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Oriental Mindoro}}
- 
-															
+ 														
 [[Category:Saray baley na Oriental Mindoro]]
