--- a/Naujan.mw
+++ b/Naujan.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_oriental mindoro naujan.png |right | Map of [[Mindoro ed Bokig]] showing the location of Naujan.]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Naujan, Oriental Mindoro
@@ -90,6 +90,8 @@ Say Nauhan walay 70 ya [[barangay]]:
 * Magtibay
 * Paitan
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
