--- a/Pinamalayan,_Oriental_Mindoro.mw
+++ b/Pinamalayan,_Oriental_Mindoro.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator oriental mindoro pinamalayan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pinamalayan, Oriental Mindoro
 | 1990 = 58777		
@@ -52,12 +53,14 @@ Say '''Pinamalayan''' et unaan ya klase baley ed luyag na [[Oriental Mindoro]], 
 * Zone III
 * Zone IV
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Oriental Mindoro}}
- 
-															
+ 														
 [[Category:Saray baley na Oriental Mindoro]]
