--- a/Pola,_Oriental_Mindoro.mw
+++ b/Pola,_Oriental_Mindoro.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_oriental mindoro pola.png | Map of [[Mindoro ed Bokig]] showing the location of Pola. |right]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pola, Oriental Mindoro
@@ -41,6 +41,9 @@ Say Pola walay 23 ya [[barangay]]:
 * Tiguihan
 * Campamento
 * Misong
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
