--- a/Puerto_Galera,_Oriental_Mindoro.mw
+++ b/Puerto_Galera,_Oriental_Mindoro.mw
@@ -1,4 +1,4 @@
-[[File: Ph_locator_oriental mindoro puerto galera.png |Map of [[Mindoro ed Bokig]] showing the location of the port of Galera. |right]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Puerto Galera, Oriental Mindoro
@@ -44,6 +44,9 @@ Image:PH - Puerto Galera - White Beach 2.jpg|White Beach, looking towards the we
 Image:PH - Puerto Galera - White Beach - sunset 1.jpg|White Beach at sunset, looking towards the northeast end
 File:La Laguna Beach.jpg|La Laguna Beach, 2005
 </gallery>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Geographic location
  | Centre    = Puerto Galera
