--- a/San_Teodoro.mw
+++ b/San_Teodoro.mw
@@ -1,4 +1,4 @@
-[[File:Ph_locator_oriental mindoro san teodoro.png |right|Map of [[Mindoro ed Bokig]] showing the location of San Teodoro. ]]
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Teodoro, Oriental Mindoro
@@ -14,8 +14,6 @@
 |}}
 Say '''San Teodoro''' et kumapat ya klase baley ed luyag na [[Oriental Mindoro]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 15,810 totoo. Walay kabaleg tan sukat to ya 341 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 5202.	
 															
-
-
 == Saray barangay ==
 
 * Bigaan
@@ -26,6 +24,9 @@ Say '''San Teodoro''' et kumapat ya klase baley ed luyag na [[Oriental Mindoro]]
 * Tacligan
 * Poblacion
 * Caagutayan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
