--- a/Template:Reflist.mw
+++ b/Template:Reflist.mw
@@ -1,17 +1,14 @@
 <templatestyles src="Reflist/styles.css" />
 <div class="reflist <!--
+ -->{{#if: {{{1|}}} {{{colwidth|}}}
+    | columns references-column-width
+	}}" style="<!--
  -->{{#if: {{{1|}}}
     | {{#iferror: {{#ifexpr: {{{1|1}}} > 1 }}
-      | references-column-width 
-      | references-column-count references-column-count-{{{1}}} }}
+      | {{column-width|1={{{1}}}}}
+      | {{#switch:{{{1|}}}|1=|2={{column-width|1=30em}}|#default={{column-width|1=25em}}}} }}
     | {{#if: {{{colwidth|}}}
-      | references-column-width }} }}" style="<!--
- -->{{#if: {{{1|}}}
-    | {{#iferror: {{#ifexpr: {{{1|1}}} > 1 }}
-      | {{column-width|{{{1}}}}}
-      | {{column-count|{{{1}}}}} }}
-    | {{#if: {{{colwidth|}}}
-      | {{column-width|{{{colwidth}}}}} }} }} list-style-type: <!--
+      | {{column-width|1={{{colwidth}}}}} }} }} list-style-type: <!--
  -->{{{liststyle|{{#switch: {{{group|}}}
     | upper-alpha
     | upper-roman
@@ -19,9 +16,6 @@
     | lower-greek
     | lower-roman = {{{group}}}
     | #default = decimal}}}}};">
-{{#tag:references|{{{refs|}}}|group={{{group|}}}}}</div><noinclude>
-{{documentation}}[[ab:Ашаблон:Reflist]]
-[[br:Patrom:Reflist]]
-[[he:תבנית:Reflist]]
-[[pt:Predefinição:Reflist]]
+{{#tag:references|{{{refs|}}}|group={{{group|}}}|responsive={{#if:{{{1|}}}{{{colwidth|}}}|0|1}}}}</div>{{#invoke:Check for unknown parameters|check|unknown={{main other|[[Category:Pages using reflist with unknown parameters|_VALUE_{{PAGENAME}}]]}}|preview=Page using [[Template:Reflist]] with unknown parameter "_VALUE_"|ignoreblank=y| 1 | colwidth | group | liststyle | refs }}<noinclude>
+{{Documentation}}
 </noinclude>
