--- a/Aborlan.mw
+++ b/Aborlan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan aborlan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Aborlan, Palawan
 | 1990 = 18751		
@@ -34,6 +35,9 @@ Say '''Aborlan''' et unaan ya klase baley ed luyag na [[Palawan]], [[Pilipinas]]
 * Poblacion
 * Culandanum
 * Marikit
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
