--- a/Araceli.mw
+++ b/Araceli.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan araceli.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Araceli, Palawan
 | 1990 = 8708		
@@ -27,12 +28,15 @@ Say '''Araceli''' et kumapat ya klase baley ed luyag na [[Palawan]], [[Pilipinas
 * Dagman
 * Calandagan 
 * Poblacion 
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}												
+{{Palawan}}	
+											
 [[Category:Saray baley na Palawan]]
