--- a/Cagayancillo.mw
+++ b/Cagayancillo.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan cagayancillo.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cagayancillo, Palawan
 | 1990 = 5082		
@@ -27,10 +28,14 @@ Say '''Cagayancillo''' et kumanem ya klase baley ed luyag na [[Palawan]], [[Pili
 * Talaga
 * Wahig (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}														
+{{Palawan}}	
+													
 [[Category:Saray baley na Palawan]]
