--- a/Coron.mw
+++ b/Coron.mw
@@ -1,4 +1,7 @@
-[[File:Ph locator palawan coron.png|right|270px]]	
+{{Infobox location
+|zoom = 8
+}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Coron, Palawan
 | 1990 = 33228		
@@ -39,10 +42,14 @@ Say '''Coron''' et unaan ya klase baley ed luyag na [[Palawan]], [[Pilipinas]]. 
 * Turda
 * Baranggay VI (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}												
+{{Palawan}}	
+											
 [[Category:Saray baley na Palawan]]
