--- a/Busuanga.mw
+++ b/Busuanga.mw
@@ -1,4 +1,6 @@
-{{Infobox location}}
+{{Infobox location
+|zoom = 8
+}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Busuanga, Palawan
