--- a/Culion.mw
+++ b/Culion.mw
@@ -1,4 +1,7 @@
-[[File:Ph locator palawan culion.png|right|270px]]
+{{Infobox location
+|zoom = 8
+}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Culion, Palawan
 | 1990 =		
@@ -28,11 +31,15 @@ Say '''Culion''' et kumatlo ya klase baley ed luyag na [[Palawan]], [[Pilipinas]
 * De Carabao
 * Burabod
 * Halsey
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}												
+{{Palawan}}	
+											
 [[Category:Saray baley na Palawan]]
