--- a/Dumaran.mw
+++ b/Dumaran.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan dumaran.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dumaran, Palawan
 | 1990 = 12624		
@@ -30,11 +31,15 @@ Say '''Dumaran''' et kumatlo ya klase baley ed luyag na [[Palawan]], [[Pilipinas
 * Santo Tomas
 * Tanatanaon
 * Santa Maria
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}											
+{{Palawan}}
+											
 [[Category:Saray baley na Palawan]]
