--- a/Kalayaan,_Palawan.mw
+++ b/Kalayaan,_Palawan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan kalayaan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kalayaan, Palawan
 | 1990 = 50		
@@ -16,6 +17,9 @@ Say '''Kalayaan''' et kumalima ya klase baley ed luyag na [[Palawan]], [[Pilipin
 ==Saray Barangay==
 *Pag-asa
 
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
