--- a/Linapacan.mw
+++ b/Linapacan.mw
@@ -1,4 +1,7 @@
-[[File:Ph locator palawan linapacan.png|right|270px]]
+{{Infobox location
+|zoom = 8
+}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Linapacan, Palawan
 | 1990 = 5835		
@@ -26,6 +29,8 @@ Say '''Linapacan''' et kumalima ya klase baley ed luyag na [[Palawan]], [[Pilipi
 * San Miguel (Pob.)
 * San Nicolas
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
