--- a/Magsaysay,_Palawan.mw
+++ b/Magsaysay,_Palawan.mw
@@ -1,4 +1,7 @@
-[[File:Ph locator palawan magsaysay.png|right|270px]]
+{{Infobox location
+|zoom = 8
+}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magsaysay, Palawan
 | 1990 = 10028		
@@ -26,12 +29,15 @@ Say '''Magsaysay''' et kumalima ya klase baley ed luyag na [[Palawan]], [[Pilipi
 * Los Angeles
 * Lucbuan
 * Rizal
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}										
+{{Palawan}}		
+								
 [[Category:Saray baley na Palawan]]
