--- a/Narra.mw
+++ b/Narra.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan narra.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Narra, Palawan
 | 1990 = 41326		
@@ -37,12 +38,15 @@ Say '''Narra''' et unaan ya klase baley ed luyag na [[Palawan]], [[Pilipinas]]. 
 * Teresa
 * Tinagong Dagat
 * Bagong Sikat
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}										
+{{Palawan}}	
+									
 [[Category:Saray baley na Palawan]]
