--- a/Quezon,_Palawan.mw
+++ b/Quezon,_Palawan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan quezon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Quezon, Palawan
 | 1990 = 32538		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Quezon''' et unaan ya klase baley ed luyag na [[Palawan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 55,142 totoo. Walay kabaleg tan sukat to ya 943.19 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 5303.	
-
 
 ==Saray barangay==
 * Alfonso XIII (Pob.)
@@ -29,12 +29,15 @@ Say '''Quezon''' et unaan ya klase baley ed luyag na [[Palawan]], [[Pilipinas]].
 * Kalatagbak
 * Malatgao
 * Tagusao
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}														
+{{Palawan}}	
+													
 [[Category:Saray baley na Palawan]]
