--- a/Roxas,_Palawan.mw
+++ b/Roxas,_Palawan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan roxas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Roxas, Palawan
 | 1990 = 36604		
@@ -45,12 +46,15 @@ Say '''Roxas''' et unaan ya klase baley ed luyag na [[Palawan]], [[Pilipinas]]. 
 * Barangay V Pob. (Porao Islan
 * Barangay VI Pob. (Johnson Island)
 * Nicanor Zabala
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}													
+{{Palawan}}	
+												
 [[Category:Saray baley na Palawan]]
