--- a/Sofronio_Española.mw
+++ b/Sofronio_Española.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator palawan sofronio española.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sofronio Española, Palawan
 | 1990 =		
@@ -46,11 +47,14 @@ Say '''Sofronio Española''' et kumadwa ya klase baley ed luyag na [[Palawan]], 
 * Baranggay VI Pob. (Johnson Is
 * Nicanor Zabala
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Palawan}}														
+{{Palawan}}		
+												
 [[Category:Saray baley na Palawan]]
