--- a/Puerto_Princesa.mw
+++ b/Puerto_Princesa.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_palawan_puerto_princesa.png|right|270px]] 							
+{{Infobox location}}						
 									
 Say '''Puerto Princesa''' et unaan ya klase siyudad ed luyag na [[Palawan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 222,673 totoo. <br> 	
-Walay kabaleg tan sukat to ya 2,381.02 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 5300. 			
+Walay kabaleg tan sukat to ya 2,381.02 sq. km. Sikato et walad  kumatlo ya distrito. Say zip code to et 5300. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Palawan}}	
 									
 [[Category:Saray siyudad na Filipinas]]
