--- a/Apalit.mw
+++ b/Apalit.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Apalit |
- sealfile     =  |
- locatormapfile = Ph_locator_pampanga apalit.png |
- caption      = Map of [[Pampanga]] showing the location of Apalit. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Eastern District |
- barangays    = 12 |
- class        = 3rd class |
- mayor        = [[Ivy Cruz]] ([[August 4]], [[2012]]-presente) |
- founded      = [[2010]] |
- cityhood     = |
- areakm2      = 72 |
- pop2000      = 782950 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Apalit, Pampanga
 | 1990 = 62373		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Apalit'''  sakey baley dia [[Pampanga]], [[Filipinas]]
+Say '''Apalit'''  sakey baley dia [[Pampanga]], [[Filipinas]].
 
 
 == Listaan na barangay ==
@@ -50,9 +32,11 @@ Say Apalit walay 12 ya [[barangay]]:
 * Sulipan
 * Tabuyuc (Santo Rosario)
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
  [[Category:Saray baley na Pampanga]]
