--- a/Arayat.mw
+++ b/Arayat.mw
@@ -1,23 +1,5 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Baley na Arayat<br>''Municipality of Arayat''<br>''Balen ning Araýat'' |
- sealfile     =  |
- locatormapfile = Ph_locator_pampanga arayat.png |
- caption      = Map of [[Pampanga]] showing the location of Arayat. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Northern District |
- barangays    = 30 |
- class        = 1st class |
- mayor        = [[Luis Espino]] |
- founded      = [[1576]] |
- cityhood     = |
- areakm2      = 13448 |
- pop2000      = 1183120 |
- popden2000   = 880 |
- coordinates  = |
-}}
+{{Translation}}
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Arayat, Pampanga
@@ -33,7 +15,6 @@
 |}}
 	
 Say '''Arayat''' ([[salitan Kapampangan|Kapampangan]]: ''Balen ning Araýat'') sakey baley dia [[Pampanga]], [[Filipinas]]. Onong so huge portion diad [[Bantay Arayat]] et ya lokasiyon so me municipio.
-
 
 == Listaan na barangay ==
 
@@ -87,9 +68,11 @@ File:Arayatbanojf.JPG|San Juan Baño grotto of God the Father and the Nativity
 </gallery>
 
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
