--- a/Bacolor.mw
+++ b/Bacolor.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Bakolor<br>''Municipality of Bacolor''<br>''Bayan ng Bakolor''<br>''Municipalidad de Bacólor'' |
- sealfile     =  |
- locatormapfile = Ph_locator_pampanga bacolor.png |
- caption      = Map of [[Pampanga]] showing the location of Bacolor. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Central District |
- barangays    = 21 |
- class        = 3rd class |
- mayor        = Jose Maria O.Hizon |
- founded      = [[1583]] |
- cityhood     = |
- areakm2      = 71.700 |
- pop2000      = 25238 |
- popden2000   = 30290 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bacolor, Pampanga
 | 1990 = 67259		
@@ -30,8 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Bacolor''' ([[salitan Espanol|Kastila]]: ''Municipalidad de Bacólor''; [[Salitan Tagalog|Tagalog]]: ''Bayan ng Bakolor'') sakey baley dia [[Pampanga]], [[Filipinas]]. 
-
+Say '''Bacolor''' sakey baley dia [[Pampanga]], [[Filipinas]]. 
 
 == Listaan na barangay ==
 
@@ -64,12 +45,11 @@ Say Bacolor walay 21 ya [[barangay]]:
 * Tinajero
 |}
 
-[[image:Bacolor Church.JPG|none|250px]]
+== Saray reperensiya ==
+{{Reflist}}
 
-
-
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
