--- a/Candaba.mw
+++ b/Candaba.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Candaba<br>''Kandaba'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga candaba.png |
- caption      = Map of [[Pampanga]] showing the location of Candaba. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Eastern District |
- barangays    = 33 |
- class        = 2nd class |
- mayor        = [[Jerry Pelayo]] |
- founded      = [[May 5]], [[2011]] |
- cityhood     = |
- areakm2      = 176.4000 |
- pop2000      = 965890 |
- popden2000   = 5500 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Candaba, Pampanga
 | 1990 = 68145		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Candaba''', o ''Pueblo ya Candaba'' ([[salitan Tagalog|Tagalog]]: ''Kandaba''), sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]
+Say '''Candaba''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]].
 
 == Listaan na barangay ==
 
@@ -42,25 +24,25 @@ Say Candaba walay 33 ya [[barangay]]:
 * Bahay Pare
 * Bambang
 * Barangca
-* [[Barit]]
-* [[Buas]] (Poblacion)
-* [[Cuayang Bugtong]]
+* Barit
+* Buas (Poblacion)
+* Cuayang Bugtong
 * Dalayap
 * Dulong Ilog
 * Gulap
 * Lanang
-* [[Lourdes (Candaba)|Lourdes]]
+* Lourdes
 | valign="top" |
 * Magumbali
 * Mandasig
 * Mandili
 * Mangga
-* [[Mapaniqui]]
+* Mapaniqui
 * Paligui
 * Pangclara
 * Pansinao
 * Paralaya (Poblacion)
-* [[Pasig (Pampanga)|Pasig]]
+* Pasig
 * Pescadores (Poblacion)
 | valign="top" |
 * Pulong Gubat
@@ -68,18 +50,19 @@ Say Candaba walay 33 ya [[barangay]]:
 * Salapungan
 * San Agustin (Poblacion)
 * Santo Rosario
-* [[Tagulod]]
+* Tagulod
 * Talang
-* [[Tenejero (Pampanga)|Tenejero]]
-* [[Vizal San Pablo]]
-* [[Vizal Santo Cristo]]
-* [[Vizal Santo Niño]]
+* Tenejero
+* Vizal San Pablo
+* Vizal Santo Cristo
+* Vizal Santo Niño
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
 
-
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
 [[Category:Saray baley na Pampanga]]
