--- a/Floridablanca.mw
+++ b/Floridablanca.mw
@@ -1,23 +1,7 @@
 {{translation}}
 
-{{Infobox Philippine city |
- infoboxtitle = Floridablanca<br>''(Florida Blanca)'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga floridablanca.png |
- caption      = Map of [[Pampanga]] showing the location of Floridablanca. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Western District |
- barangays    = 33 |
- class        = 1st class |
- mayor        = [[Eduardo Guerrero]] |
- founded      = [[April 30]], [[1867]] |
- cityhood     = |
- areakm2      = 175.48  |
- pop2000      = 103,388 |
- popden2000   = 5900 |
- coordinates  = |
-}}
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Floridablanca, Pampanga
 | 1990 = 66146		
@@ -30,7 +14,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Floridablanca''' (imbes na [[Florida]] [[Blanca]]), sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]
+Say '''Floridablanca''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]].
 
 == Listaan na barangay ==
 
@@ -90,7 +74,8 @@ Say Floridablanca walay 33 ya [[barangay]]:
 * [[Reynaldo Vitug Reyes]], was a native of Maligaya, Floridablanca and son of the late Former Municipal Councilor Francisco S. Reyes who became Major General of the Philippine Air Force (PAF) and known as the first Floridablancan Air Force General;
 * [[Tito Morales Mendiola]], was a native of Fortuna, Floridablanca. He was the former mayor of the town (Floridablanca) and the Senior Vice President of Philippine Health (PHILHEALTH) Insurance for Operations and Area Vice President for Mindanao;
 
-==Lokasiyon ed Hiyograpiko==
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Geographic location
  | Centre = Floridablanca
@@ -103,8 +88,8 @@ Say Floridablanca walay 33 ya [[barangay]]:
  | Southwest = [[Olongapo]], Zambales
 }}
 
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
