--- a/Guagua.mw
+++ b/Guagua.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Guagua<br>''Quaqua'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga guagua.png |
- caption      = Map of [[Pampanga]] showing the location of Guagua. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Western District |
- barangays    = 31 |
- class        = premier class |
- mayor        = Cristel Ann Guerra-Ragawan |
- founded      = [[1644]] |
- cityhood     = |
- areakm2      = -  |
- pop2000      = 96,858 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Guagua, Pampanga
 | 1990 = 88290		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Guagua''' ([[salitan Latino|Latino]]/[[Bibe]]: ''Quaqua''), sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]
+Say '''Guagua''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]].
 
 == Listaan na barangay ==
 
@@ -39,9 +21,9 @@ Say Guagua walay 31 ya [[barangay]]:
 <table><tr><td valign="top">
 *Ascomo
 *Bancal
-*Jose Abad Santos ([[Siran]])
+*Jose Abad Santos
 *Lambac
-*[[Magsaysay (Pampanga)|Magsaysay]]
+*Magsaysay
 *Maquiapo
 *Natividad
 *Plaza Burgos (Poblacion)
@@ -51,30 +33,32 @@ Say Guagua walay 31 ya [[barangay]]:
 </td><td valign="top">
 *San Antonio
 *San Isidro
-*[[San José (Guagua)|San José]]
-*[[San Juan Bautista (Guagua)|San Juan Bautista]]
-*[[San Juan Nepomuceno (Pampanga)|San Juan Nepomuceno]]
+*San José 
+*San Juan Bautista 
+*San Juan Nepomuceno
 *San Matias
-*San Miguel ([[Betis]])^^
-*[[San Nicolas 1st]]
-*[[San Nicolas 2nd]]
+*San Miguel 
+*San Nicolas 1st
+*San Nicolas 2nd
 *San Pablo
 *San Pedro
 </td><td valign="top">
-*San Rafael ([[Duck Island (Pampanga)|Duck Island]])
+*San Rafael
 *San Roque
 *San Vicente (Ebus)
 *San Juan
 *Santa Filomena (Poblacion)
-*[[Santa Ines (Guagua)|Santa Ines]]
-*Santa Ursula ([[Paglalabuan]])
+*Santa Ines
+*Santa Ursula 
 *Santo Cristo
 *Santo Niño (Poblacion)
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
