--- a/Lubao.mw
+++ b/Lubao.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Lubao<br>''Balen ning Rubaw'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga lubao.png |
- caption      = Map of [[Pampanga]] showing the location of Lubao. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Southern District |
- barangays    = 44 |
- class        = 1st class |
- mayor        = Charlyn Macapagal |
- founded      = [[2003]] |
- cityhood     = |
- areakm2      = -  |
- pop2000      = 125,699 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lubao, Pampanga
 | 1990 = 99705		
@@ -87,15 +69,17 @@ Say Lubao walay 44 ya [[barangay]]:
 * Santo Niño (Prado Saba)
 * Santo Cristo
 * Santo Tomas (Pob.)
-
 </td></tr></table>
 
 ==Saray too diad Lubao==
 * [[Dionysus Macapagal]]
 * [[Rod Vitug]] (inianak Abril 25, [[1961]])
 
-{{philippines-geo-stub}}
+== Saray reperensiya ==
+{{Reflist}}
+
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
