--- a/Macabebe.mw
+++ b/Macabebe.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Macabebe<br>''Balen ning Makabebe'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga macabebe.png |
- caption      = Map of [[Pampanga]] showing the location of Macabebe. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Southern District |
- barangays    = 25 |
- class        = 3rd class |
- mayor        = John Carlo Dela Cruz |
- founded      = [[1688]] |
- cityhood     =  |
- areakm2      = -  |
- pop2000      = 653460 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Macabebe, Pampanga
 | 1990 = 55505		
@@ -30,8 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Macabebe''' ([[salitan Kapampangan|Kapampangan]]: ''Balen ning Makabebe''), sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 65,346 ya too diad 12,141 ya pamilya. 
-
+Say '''Macabebe''' ([[salitan Kapampangan|Kapampangan]]: ''Balen ning Makabebe''), sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay papulasyon to ya 65,346 ya too diad 12,141 ya pamilya. 
 
 == Listaan na barangay ==
 
@@ -41,10 +22,10 @@ Say Macabebe walay 25 ya [[barangay]]:
 |-----
 | valign="top" |
 * Batasan
-* [[Caduang Tete]]
+* Caduang Tete
 * Candelaria
 * Castuli
-* [[Consuelo (Pampanga)|Consuelo]]
+* Consuelo
 * Dalayap
 * Mataguiti
 * San Esteban
@@ -58,20 +39,21 @@ Say Macabebe walay 25 ya [[barangay]]:
 * San Roque
 * San Vicente
 * Santa Cruz (Pob.)
-* [[Santa Lutgarda (Pampanga)|Santa Lutgarda]]
+* Santa Lutgarda
 * Santa Maria
 * Santa Rita (Pob.)
 * Santo Niño
 * Santo Rosario (Pob.)
 * Saplad David
-* [[Tacazan]]
-* [[Telaxan]]
+* Tacazan
+* Telaxan
 |}
 
+== Saray reperensiya ==
+{{Reflist}}
 
-
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
