--- a/Template:Pampanga.mw
+++ b/Template:Pampanga.mw
@@ -13,7 +13,7 @@
 * [[Guagua, Pampanga|Guagua]]
 * [[Lubao, Pampanga|Lubao]]
 * [[Macabebe]]
-* [[Magalang, Pampanga|Magalang]]
+* [[Magalang]]
 * [[Masantol, Pampanga|Masantol]]
 * [[Mexico, Pampanga|Mexico]]
 * [[Minalin, Pampanga|Minalin]]
