--- a/Magalang.mw
+++ b/Magalang.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Magalang<br>''San Rodrigo del Mario'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga magalang.png |
- caption      = Map of [[Pampanga]] showing the location of Magalang. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Northern District |
- barangays    = 27 |
- class        = 3rd class |
- mayor        = Romulo F. Pecson |
- founded      = 2006 |
- cityhood     = - |
- areakm2      = -  |
- pop2000      = 77,530 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magalang, Pampanga
 | 1990 = 43940		
@@ -30,8 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Magalang''' (say suraten diad '''"San Rodrigo del Mario"'''), sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 77,530 ya too diad 15,257 ya pamilya. 
-
+Say '''Magalang''' (say suraten diad '''"San Rodrigo del Mario"'''), sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay papulasyon to ya 77,530 ya too diad 15,257 ya pamilya. 
 
 == Listaan na barangay ==
 
@@ -69,9 +50,11 @@ Say Magalang walay 27 ya [[barangay]]:
 * Ayala
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
