--- a/Masantol.mw
+++ b/Masantol.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Masantòl |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga masantol.png |
- caption      = Map of [[Pampanga]] showing the location of Masantol. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Southern District |
- barangays    = 26 |
- class        = 3rd class |
- mayor        = Braiden Lou Farson-Jefferson |
- founded      = 1572 |
- cityhood     = - |
- areakm2      = -  |
- pop2000      = 48,120 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Masantol, Pampanga
 | 1990 = 41964		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Masantòl''' sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 48,120 ya too diad 8,899 ya pamilya. 
+Say '''Masantol''' sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay papulasyon to ya 48,120 ya too diad 8,899 ya pamilya. 
 
 
 == Listaan na barangay ==
@@ -68,10 +50,11 @@ Say Masantòl walay 26 ya [[barangay]]:
 * Santo Niño
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
