--- a/Minalin.mw
+++ b/Minalin.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Minalin<br>''Ville du Minalyn''<br>''Saint Dominique of Mine Lyn'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga minalin.png |
- caption      = Map of [[Pampanga]] showing the location of Minalin. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Eastern District |
- barangays    = 15 |
- class        = 3rd class |
- mayor        = Michael James N. Nixon |
- founded      = - |
- cityhood     = - |
- areakm2      = -  |
- pop2000      = 35,150 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Minalin, Pampanga
 | 1990 = 34795		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Minalin''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 35,150 ya too diad 6,426 ya pamilya. 
+Say '''Minalin''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay papulasyon to ya 35,150 ya too diad 6,426 ya pamilya. 
 
 == Listaan na barangay ==
 
@@ -52,11 +34,11 @@ Say Minalin walay 15 ya [[barangay]]:
 * Santo Rosario (Pob.)
 * Saplad
 
+== Saray reperensiya ==
+{{Reflist}}
 
-
-
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
