--- a/San_Luis,_Pampanga.mw
+++ b/San_Luis,_Pampanga.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na San Luis<br>''Pueblo Municipalidad de San Luis''<br>''Municipalité du Saint-Louisse'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga san luis.png |
- caption      = Map of [[Pampanga]] showing the location of San Luis. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Eastern District |
- barangays    = 17 |
- class        = 4th class |
- mayor        = Jayson Sagum |
- founded      = - |
- cityhood     = - |
- areakm2      = -  |
- pop2000      = 41,554 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Luis, Pampanga
 | 1990 = 31920		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''San Luis''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 41,554 ya too diad 7,321 ya pamilya. 
+Say '''San Luis''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay papulasyon to ya 41,554 ya too diad 7,321 ya pamilya. 
 
 == Listaan na barangay ==
 
@@ -58,11 +40,11 @@ Say San Luis walay 17 ya [[barangay]]:
 * Santo Tomás
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-
-
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
