--- a/Santa_Ana,_Pampanga.mw
+++ b/Santa_Ana,_Pampanga.mw
@@ -1,23 +1,4 @@
-{{translation}}
-
-{{Infobox Philippine city |
- infoboxtitle = Santa Ana<br>''Saint Anne'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga santa ana.png |
- caption      = Map of [[Pampanga]] showing the location of Santa Ana |
- region       = [[Pegley na Luzon]] (Region III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Eastern District |
- barangays    = 14 |
- class        = 4th class |
- mayor        = Rommel Concepxion |
- founded      = [[2009]]|
- cityhood     =  |
- areakm2      = 39.84   |
- pop2000      = 49,756 |
- popden2000   = 1,200 |
- coordinates  = |
-}}
+{{Infobox location}}
 
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Ana, Pampanga
@@ -34,7 +15,7 @@
 
 Say '''Santa Ana''' sakey [[baley]] diad [[filipinas|Pilipino]] ed [[luyag]] na [[Pampanga]].
 
-==Listaan na Barangay==
+==Listaan na barangay==
 
 Say Santa Ana walay 14 ya [[barangay]].
 
@@ -53,8 +34,10 @@ Say Santa Ana walay 14 ya [[barangay]].
 * Santiago (Verzosa)
 * Santo Rosario (Pagbatuan)
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{pampanga}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
