--- a/Santa_Rita,_Pampanga.mw
+++ b/Santa_Rita,_Pampanga.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Santa Rita<br>''Municipality of Holy Ruth'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga santa rita.png |
- caption      = Map of [[Pampanga]] showing the location of Santa Rita |
- region       = [[Pegley na Luzon]] (Region III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Central District |
- barangays    = 10 |
- class        = 4th class |
- mayor        = Grace Mallorca La Trinidad |
- founded      = [[2005]]|
- cityhood     =  |
- areakm2      = -   |
- pop2000      = 32,780 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Rita, Pampanga
 | 1990 = 28296		
@@ -36,7 +18,6 @@ Say '''Santa Rita''' sakey [[baley]] diad [[filipinas|Pilipino]] ed [[luyag]] na
 
 Say Santa Rita walay 10 ya [[barangay]].
 
-
 *Becuran 
 *Dila Dila (Every-Tongue)
 *San Agustin
@@ -48,8 +29,10 @@ Say Santa Rita walay 10 ya [[barangay]].
 *Santa Monica (Carolyn Brassiere)
 *San Vicente (de Ferrer)
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{pampanga}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
